--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img src="shelby.jpg" alt="picture of a car" title="get the best car deals">
   </body>
 </html>
